Fixed blurry images

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@
   color: #ff0066;
   border-color: #ff0066;
   border-radius: 10px;
-  font-size: 30px;
+  font-size: 25px;
+  background-color: #faeff3;
 }
 
 .App-button:hover {
@@ -37,7 +38,7 @@
 }
 
 .App-photo {
-  margin: 10px;
+  margin: 5px;
   height: 300px;
-  border-radius: 10px;
+  border: solid 1px black;
 }
